tests/invalid/no_systems.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "InvalidNoSystems",
    "description": "ESM file with neither models nor reaction_systems",
    "authors": [
      "Test Suite"
    ],
    "license": "MIT",
    "created": "2026-02-19T00:00:00Z",
    "modified": "2026-02-19T00:00:00Z"
  },
  "data_loaders": {
    "weather": {
      "kind": "grid",
      "source": {
        "url_template": "file:///data/weather/{date:%Y%m%d_%H%M}.nc"
      },
      "grid": {
        "family": "cartesian",
        "crs": {
          "projection": "longlat",
          "datum": "WGS84"
        },
        "description": "Native grid migrated from the loader's former 'spatial' block (RFC pure-io-data-loaders §4.1); the loader describes this grid but performs no reprojection or regridding.",
        "dimensions": [
          "lon",
          "lat"
        ],
        "extents": {
          "lon": {
            "n": "n_lon",
            "spacing": "uniform"
          },
          "lat": {
            "n": "n_lat",
            "spacing": "uniform"
          }
        },
        "parameters": {
          "n_lon": {
            "description": "lon cell count, resolved from the source dataset at load time"
          },
          "n_lat": {
            "description": "lat cell count, resolved from the source dataset at load time"
          }
        }
      },
      "variables": {
        "value": {
          "file_variable": "value",
          "units": "1"
        }
      },
      "metadata": {
        "tags": []
      }
    }
  },
  "domain": {
    "temporal": {
      "start": "2023-01-01T00:00:00Z",
      "end": "2023-01-02T00:00:00Z",
      "step": "PT1H"
    }
  }
}
